# devguard

./: .checkov.yaml  .claudeignore  .dockerignore  .env.example  .git-template  .git-template.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitmodules  .golangci.yml  .mockery.yaml  .semgrep.yml  7109998f-a36d-45b0-974d-9d1169a73d0e.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.flawfind  Dockerfile.postgres  Dockerfile.postgresql  Dockerfile.scanner  LICENSE.txt  Makefile  README.md  SECURITY.md  VERSIONING.md  bom.json  bump_version.sh  container.gov.de.rego  cosign.pub  cve_migration_mapping.json  devguard-maint  docker-compose-try-it.yaml  docker-compose.yaml  example_app_side_encryption_key.key  flake.nix  flawfix.2024-06-25.private-key.pem  gitleaks-baseline.json  (+29 more)
.claude/: settings.json
.cra/: DEFAULT_CONFIGURATION.md  ENCRYPTION.md  PRODUCT_CLASS.md  SBOM.md  SECURE_CODING_STANDARD.md  SECURITY.md  SECURITY_NOTES.md  SECURITY_SCANNING.md  THREAT_MODEL.md
.hydra/: hydra.example.yml  hydra.yml
.kratos/: gh-mapping.jsonnet  identity.schema.json  kratos.docker-compose-try-it.yml  kratos.example.yml  kratos.yml
.oathkeeper/: config.example.yml  jwks.json  oathkeeper.yaml  rules.example.json  rules.json
accesscontrol/: api_client.go  casbin_rbac.go  casbin_rbac_security_test.go  casbin_rbac_test.go  casbin_watcher.go  external_entity_provider_rbac.go  external_entity_provider_rbac_test.go  members.go  providers.go  session.go
auth/: api_client.go
client/: client.go
nix/python-tools/: pyproject.toml
(+2199 files in other folders)
