[project]
name = "devguard-scanner-tools"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "semgrep==1.168.0",
    "checkov==3.3.5",
]

[tool.uv]
exclude-newer = "7 days"
# Pin transitive deps to versions that fix known CVEs.
# These constraints are enforced during `uv lock` and captured in uv.lock —
# no manual Nix overrides needed.
constraint-dependencies = []
